Add Entity to Component + Warn if comp is added to two or more entities